# klyde

./: .gitignore  README.md
config/: README
config/profiles/skinny/: krunnerrc
config/simplersystemsettings/: klyde-bluedevildevices.desktop  klyde-bluedeviltransfer.desktop  klyde-clock.desktop  klyde-cursortheme.desktop  klyde-desktop.desktop  klyde-desktoptheme.desktop  klyde-fonts.desktop  klyde-kcm_akonadi_resources.desktop  klyde-kcm_apper.desktop  klyde-kcm_nepomuk.desktop  klyde-kcm_printer_manager.desktop  klyde-kcm_ssl.desktop  klyde-kcm_useraccount.desktop  klyde-kcmsmserver.desktop  klyde-keys.desktop  klyde-kgamma.desktop  klyde-kwindecoration.desktop  klyde-language.desktop  klyde-powerdevilprofilesconfig.desktop  klyde-proxy.desktop  klyde-randr.desktop  klyde-settings-accessibility.desktop  klyde-settings-bluetooth.desktop  klyde-settings-classic-view.desktop  klyde-settings-desktop.desktop  klyde-settings-display.desktop  klyde-settings-icon-view.desktop  klyde-settings-locale.desktop  klyde-settings-lost-and-found.desktop  klyde-settings-network.desktop  klyde-settings-personal.desktop  klyde-settings-power-management.desktop  klyde-smb.desktop  klyde-spellchecking.desktop
docs/: Lightning Talk  README  notes
docs/ux/: README
footprint/: README  monkey-benchmarking.txt
footprint/profiles/: README
startup/: README  systemd notes
startup/kde-session-units/: CMakeLists.txt  DESIGN  README  kdeinit.service  kdeinit.service.in  ksmserver.service.in  ksplashx.service.in  lnusertemp@.service.in  systemdkde.target
(+157 files in other folders)
